21 - Final Challenge/src/scss/main.scss
$dark:#2E323F;
$darkgray:#3B4050;
$gray:#6F737F;
$gold:#A59678;

*,*::before,*::after{
  box-sizing: border-box;
}

body{
  margin:0;
  padding:0;
}


img{
  max-width: 100%;
}
ul{
  padding:0;
  list-style-position: outside;
  list-style: none;
  
  li{
    padding:0.5rem;
  }
}

.btn {
  font-family: 'Oswald', sans-serif;
  display: inline-block;
  text-decoration: none;
  text-transform: uppercase; 
  color: #fff;
  font-weight: 900;
  background-color: $gold;
  padding: .75em 2em;
  border-radius: 100px;
}

.container{
  width:85%;
  max-width:1100px;
  margin:0 auto;
  padding: 1rem 0;
}
header {
  background: $dark;
  width: 100%;
  padding: 1em 0;
  text-align: center;
}



.nav-toggle {
  cursor: pointer;
  border: 0;
  width: 3em;
  height: 3em;
  padding: 0em;
  border-radius: 50%;
  background: $dark;
  color: white;
  transition: opacity 250ms ease;
  
  position: absolute;
  left: 0;
}

.nav-toggle:focus,
.nav-toggle:hover {
  opacity: .75;
}

.hamburger {
  width: 50%;
  position: relative;
}

.hamburger,
.hamburger::before,
.hamburger::after {
  display: block;
  margin: 0 auto;
  height: 3px;
  background: white;
}

.hamburger::before,
.hamburger::after {
  content: '';
  width: 100%;
}

.hamburger::before {
  transform: translateY(-6px);
}

.hamburger::after {
  transform: translateY(3px);
}

/* made changes here from video
 to make it more accessible.
 
 Works the same :) */
.nav {
  visibility: hidden;
  height: 0;
  color:white;
  font-family: 'Oswald', sans-serif;;
  position: absolute;
}

.nav--visible {
  visibility: visible;
  height: auto;
  position: relative;
} 

.nav__list{
  margin: 0;
  padding:0;
  list-style: none;
}
.nav__item{
  margin-top: 0.75em;
}
.nav__link{
  text-decoration: none;
  text-transform: uppercase;
  color:white;
}
.nav__link:hover,.nav__link:focus{
  opacity: 0.75;
}
.logo {
  height: 30px;
}
.section-title{
  color:$gold;
  font-family: 'Oswald', sans-serif;
  
}

.section-content{
  font-family: 'Montserrat', sans-serif;
}

.intro{
  background-color: $darkgray;
  h1{
    font-family: 'Oswald', sans-serif;
    font-size:4rem;
    color:white;
    line-height: 1.1;
    
    span{
      color:$gold;
    }
  }
  p{
    color:#fff;
    font-family: 'Montserrat', sans-serif;
  }
}


.approach{
  .col{
    align-items: flex-start;
  }
  .col--approach{
    text-align: center;
    background-color: $darkgray;
    padding:1rem;
    margin:0.5rem 0;
    color:white;
  }
  .section-title--approach{
    color:white;
  }
}

.about{
  background-color:$darkgray;
  color:$gray;
  &--title{
    font-family: 'Oswald', sans-serif;
    color:white;
    font-size: 4rem;
  }
  &__col--title{
    font-family: 'Oswald', sans-serif;
    font-size: 1.2rem;
    color:$gold;
  }
  li{
    
    font-family: 'Montserrat', sans-serif;
  }
}

@media (min-width:700px){
    .nav-toggle {
      display: none;
  }
  .col{
    width:100%;
  }
  .intro{
    .row{
      align-items: center;
    }
       
  
  }
  .col + .col{
    margin-left: 0.5rem;
  }
  .nav {
      visibility: visible;
      display: flex;
      align-items: center;
      height: auto;
      position: relative;
      justify-content: flex-end;
  }
  .nav__list{
      display:flex;
      margin:0;
  }
  .nav__item{
      margin:0 0 0 1.5em;
  }

  .row {
      display: flex;
      justify-content: space-between;
      align-items: flex-start;

  }
}

